# serialroomba

./: .gitignore  README.md  pyproject.toml  sonar-project.properties  test.py  test2.py
serialroomba/: serialroomba.py
serialroomba/controllers/: __init__.py  cleaning.py  controller.py  environment.py  mode.py  motor.py  movement.py  power.py  serial.py  state.py
serialroomba/controllers/models/: command.py  state.py  validator_enum.py
serialroomba/controllers/sensors/: __init__.py  packet.py  power.py  sensor.py
tests/: test_serialroomba.py
tests/controllers/: test_cleaning.py  test_controller.py  test_environment.py  test_mode.py  test_movement.py  test_power.py  test_sensor.py  test_serial.py  test_state.py  test_validator_enum.py
tests/controllers/models/: test_command.py  test_state.py
